# poc-gridtokenx-ledger

./: .dockerignore  1KWH_EQUALS_1TOKEN.md  API_DOCUMENTATION.md  API_README.md  BACKEND_API_SUMMARY.md  CLEAN_DESIGN_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DOCKER_DEVELOPMENT_README.md  DOCKER_K8S_DEPLOYMENT_GUIDE.md  DOCKER_KUBERNETES_DEPLOYMENT_GUIDE.md  DOCKER_README.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  ENERGY_TRADING_CONFIG.md  ENERGY_TRADING_DOCUMENTATION.md  ENERGY_TRADING_EASY_CONFIG.md  ENERGY_TRADING_IMPLEMENTATION_COMPLETE.md  HYBRID_ARCHITECTURE_DESIGN.md  HYBRID_ARCHITECTURE_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODERN_ARCHITECTURE.md  NETWORK_TOPOLOGY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_TESTING.md  README.md  REFACTORING_SUMMARY.md  SCENARIO_PERFORMANCE_SUMMARY.md  TOKEN_SYSTEM_SUMMARY.md  build.sh  deploy.sh  docker-compose.sh  docker-compose.yml  run_performance_tests.sh  test-docker-setup.sh  test_api.sh
.github/workflows/: ci-cd.yml  release.yml  security.yml  test-and-build.yml
benches/: performance_benchmark.rs
docker/: init-db.sql  nginx.conf  prometheus.yml
docker/config/: app.toml  config.toml  thai_energy_chain_spec.json
examples/: api_client_demo.rs  energy_trading_demo.rs  energy_trading_demo_fixed.rs  feature_config_demo.rs  hybrid_architecture_demo.rs  load_test.rs  modern_architecture_demo.rs  performance_focused_test.rs  simple_architecture_demo.rs  simple_demo.rs  simple_feature_demo.rs  token_system_demo.rs  tps_analysis.rs  user_scenario_benchmarks.rs
k8s/: 01-namespace-configmap.yaml  02-secrets-storage.yaml  03-validator-statefulset.yaml  04-api-server-deployment.yaml  05-oracle-deployment.yaml  06-ingress-loadbalancer.yaml  07-rbac-security.yaml  08-monitoring.yaml  09-autoscaling-limits.yaml
pallets/compliance/: Cargo.toml
pallets/compliance/src/: audit.rs  config.rs  erc.rs  error.rs  lib.rs  pdpa.rs  reporting.rs  sec.rs  types.rs  validation.rs
pallets/energy-trading/: Cargo.toml
pallets/energy-trading/src/: lib.rs
pallets/hybrid-architecture/: Cargo.toml  README.md
pallets/hybrid-architecture/src/: lib.rs
pallets/token-system/: Cargo.toml  README.md  README_TH.md
pallets/token-system/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
performance_reports/: component_performance_report.txt
scripts/: perf_bench.sh
src/: api_server.rs  block.rs  blockchain.rs  energy_trading.rs  lib.rs  main.rs  smart_contracts.rs  tests.rs  token_system.rs
src/api/: handlers.rs  middleware.rs  mod.rs  models.rs  server.rs
src/core/: blockchain.rs  mod.rs
src/hybrid_architecture/: compliance.rs  consortium_chain.rs  integration.rs  mod.rs  oracle_gateway.rs  public_chain.rs
src/primitives/: mod.rs
src/runtime/: mod.rs
src/services/: energy_trading.rs  mod.rs  token.rs
src/utils/: mod.rs
