[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "pallets/token-system",
    "pallets/energy-trading",
]

[[example]]
name = "token_system_demo"
path = "examples/token_system_demo.rs"

[[example]]
name = "energy_trading_demo"
path = "examples/energy_trading_demo_fixed.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

# Local pallet (standalone version)
pallet-token-system = { path = "pallets/token-system" }
pallet-energy-trading = { path = "pallets/energy-trading" }
