[package]
name = "ledger-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledger_core"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "pallets/token-system",
    "pallets/energy-trading",
]

[[bin]]
name = "ledger"
path = "src/main.rs"

[[example]]
name = "api_client_demo"
path = "examples/api_client_demo.rs"

[[example]]
name = "token_system_demo"
path = "examples/token_system_demo.rs"

[[example]]
name = "energy_trading_demo"
path = "examples/energy_trading_demo_fixed.rs"

[[example]]
name = "simple_feature_demo"
path = "examples/simple_feature_demo.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

# HTTP client for examples
reqwest = { version = "0.11", features = ["json"] }

# Local pallet (standalone version)
pallet-token-system = { path = "pallets/token-system" }
pallet-energy-trading = { path = "pallets/energy-trading" }

[features]
default = ["std"]
std = []

# Energy Trading Features (forwarded from pallet-energy-trading)
order-book = ["pallet-energy-trading/order-book"]
cda-matching = ["pallet-energy-trading/cda-matching"]
partial-fills = ["pallet-energy-trading/partial-fills"]
order-cancellation = ["pallet-energy-trading/order-cancellation"]
grid-fees = ["pallet-energy-trading/grid-fees"]
market-statistics = ["pallet-energy-trading/market-statistics"]
price-discovery = ["pallet-energy-trading/price-discovery"]
trade-history = ["pallet-energy-trading/trade-history"]
prosumer-management = ["pallet-energy-trading/prosumer-management"]
energy-tracking = ["pallet-energy-trading/energy-tracking"]
net-energy-calc = ["pallet-energy-trading/net-energy-calc"]
governance-integration = ["pallet-energy-trading/governance-integration"]
escrow-system = ["pallet-energy-trading/escrow-system"]
multi-token = ["pallet-energy-trading/multi-token"]
cross-chain = ["pallet-energy-trading/cross-chain"]
testing-utils = ["pallet-energy-trading/testing-utils"]
mock-data = ["pallet-energy-trading/mock-data"]
benchmarking = ["pallet-energy-trading/benchmarking"]
access-control = ["pallet-energy-trading/access-control"]
audit-logging = ["pallet-energy-trading/audit-logging"]
rate-limiting = ["pallet-energy-trading/rate-limiting"]
performance-optimized = ["pallet-energy-trading/performance-optimized"]
memory-efficient = ["pallet-energy-trading/memory-efficient"]
batch-processing = ["pallet-energy-trading/batch-processing"]
