[package]
name = "pallet-compliance"
version = "0.1.0"
authors = ["Thailand Energy Trading Team"]
edition = "2021"
description = "Compliance pallet for Thailand energy trading blockchain"
license = "Apache-2.0"
repository = "https://github.com/your-org/energy-trading-ledger"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local dependencies
pallet-token-system = { path = "../token-system" }
pallet-energy-trading = { path = "../energy-trading" }

[features]
default = ["std"]
std = [
    "chrono/std",
    "serde/std",
]

# Compliance features
sec-compliance = []
erc-compliance = []
pdpa-compliance = []
automated-reporting = []
audit-logging = []
real-time-monitoring = []
transaction-validation = []
risk-assessment = []
regulatory-alerts = []
