[package]
name = "pallet-token-system"
version = "1.0.0"
edition = "2021"
authors = ["Energy Trading Team"]
description = "Standalone token system for energy trading (mock version)"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
name = "pallet_token_system"
path = "src/lib.rs"
